--- a/render.yaml
+++ b/render.yaml
@@ -2,11 +2,13 @@ databases:
   - name: Are_You_Busy
     databaseName: Are_You_Busy
     user: TakenakaEri
-    region: singapore
+    plan: free
 
 services:
   - type: web
     name: Are_You_Busy
+    runtime: ruby
+    plan: free
     env: ruby
     region: singapore
     buildCommand: "./bin/render-build.sh"
@@ -14,7 +16,7 @@ services:
     envVars:
       - key: <%= ENV['DATABASE_URL'] %>
         fromDatabase:
-          name: render_app
+          name: Are_You_Busy
           property: connectionString
       - key: <%= ENV['RAILS_MASTER_KEY'] %>
         sync: false
